Fix details layout on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,6 +199,10 @@ section {
   header #nav ul li a {
     font-size: 0.9rem;
   }
+
+  #details > .container > div {
+    flex-direction: column;
+  }
 }
 
 @media screen and (min-width: 425px) and (max-width: 767px) {
